--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: mcfont;
+  src: url(assets/fonts/Minecrafter.Alt.ttf);
+}
+
+* {
+  font-family: mcfont;
+}
+
 .App {
   text-align: center;
 }
@@ -5,12 +14,6 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -24,15 +27,20 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Difficulty-buttons {
+  display: flex;
+  flex-direction: row;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  background-color: grey;
+  padding: 1em;
+  border-radius: 0.5em;
+  margin: 0.5em;
+  color: white;
+  text-shadow: -1px 1px 0 #000;
+}
+
+.App-link {
+  color: #61dafb;
 }
