--- a/src/App.css
+++ b/src/App.css
@@ -18,18 +18,22 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  height: 150px;
 }
 
 .Difficulty-buttons {
   display: flex;
   flex-direction: row;
+}
+
+#game-content {
+  background-image: url(assets/images/dirt.png);
 }
 
 button {
